--- a/braintrust/package.json
+++ b/braintrust/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.1.0",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.6.2",
+    "react-scroll": "^1.9.3",
     "react-simple-typewriter": "^5.0.1",
     "react-type-animation": "^3.2.0",
     "swiper": "^11.2.8"
