--- a/braintrust/package.json
+++ b/braintrust/package.json
@@ -15,6 +15,7 @@
     "lucide-react": "^0.518.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.6.2",
     "react-scroll": "^1.9.3",
